<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LensClient v0.9</string>
    <string name="app_hello">Welcome to LensClient v0.9</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_sysmenu">System Menu</string>
    <string name="menu_help">Help LensClient</string>
    
    <string name="worldname">World: </string>
    <string name="worldurl">Host: </string>
    <string name="worldip">IP Address: </string>
    <string name="worldport">Port: </string>

    <string name="charactername">Character: </string>
    <string name="characternamehint">name</string>
    <string name="characterworld">World: </string>
    <string name="characterchooseworld">Select World</string>
    <string name="characterpassword">Password: </string>
    <string name="characterpasswordhint">password</string>

    <string name="characterlevel">Level: </string>
    <string name="charactersex">Sex: </string>
    <string name="characterrace">Race: </string>
    <string name="charactersize">Size: </string>
    <string name="characterspecialize">Specialize: </string>
    <string name="characterclan">Clan: </string>
    <string name="characterstrength">Str: </string>
    <string name="characterpractices">Practices: </string>
    <string name="characterintellegence">Int: </string>
    <string name="charactertrains">Trains: </string>
    <string name="characterwisdom">Wis: </string>
    <string name="characteralign">Align: </string>
    <string name="characterdexterity">Dex: </string>
    <string name="characterconstitution">Con: </string>
    <string name="charactercharisma">Cha: </string>
    <string name="charactertonextlevel">Exp for level: </string>
    <string name="characterexperience">Exp Total: </string>
    <string name="characterbasehp">Base HP: </string>
    <string name="characterbasemp">Base MP: </string>
    <string name="characterage">Age: </string>
    <string name="characterhometown">Hometown: </string>
    <string name="characterkills">Kills: </string>
    <string name="characterdeaths">Deaths: </string>
    <string name="characterfleeat">Wimpy: </string>
    <string name="characterplayerkills">Player Kills: </string>
    <string name="characterplayerdeaths">Player Deaths: </string>
    <string name="characterquestpoints">Quest Points: </string>
    <string name="characterdifficulty">Quest Difficulty: </string>

    <string name="channelInfo">Info</string>
    <string name="channelQuest">Quest</string>

    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>

    <string name="sysmenu_selectcharacter">Select Character</string>
    <string name="sysmenu_openworld">Edit Character</string>
    <string name="sysmenu_editworld">Edit World</string>
    <string name="sysmenu_loaddb">Load Database</string>
    <string name="sysmenu_savedb">Save Database</string>

	<string name="northwest">Northwest</string>
    <string name="northeast">Northeast</string>
    <string name="north">North</string>
	<string name="east">East</string>
	<string name="west">West</string>
	<string name="southwest">Southwest</string>
	<string name="south">South</string>
	<string name="southeast">Southeast</string>

</resources>