<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogcharacter"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	    <TextView android:id="@+id/characternamelabel"
    	    android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
        	android:text="@string/charactername" />
	    <EditText android:id="@+id/characternametext"
    	    android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:hint="@string/characternamehint" />
	</LinearLayout>
    <!-- World -->
    <LinearLayout android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	    <TextView android:id="@+id/characterworldlabel"
	        android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
			android:text="@string/characterworld" />
		<TextView android:id="@+id/characterworldtext"
	        android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1" />
		<Button android:id="@+id/character_worldbutton"
	        android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
		    android:text="@string/characterchooseworld" />
	</LinearLayout>	
	<!-- Password -->	
    <LinearLayout android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	    <TextView android:id="@+id/characterpasswordlabel"
	 		android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/characterpassword" />
	    <EditText android:id="@+id/characterpasswordtext"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:hint="@string/characterpasswordhint" />
	</LinearLayout>
	
    <!-- Filler -->
    <TextView android:id="@+id/filler"
 		android:layout_width="0dip"
 		android:layout_height="wrap_content"
 		android:layout_weight="1" />

	<!-- Buttons (save, delete, cancel -->
    <LinearLayout android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		<Button android:id="@+id/character_savebutton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    	android:text="@string/button_save" />
		<Button android:id="@+id/character_cancelbutton"
		    android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
		    android:text="@string/button_cancel" />
		<Button android:id="@+id/character_deletebutton"
		    android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
		    android:text="@string/button_delete" />
	</LinearLayout>
</LinearLayout>    
    
